src/components/NavBar/EXV6NavBar.styl
/* ... */
.OmniSearch-container {
    position: relative;
    height: navbar-height;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    padding-left: 0.5rem;
    padding-bottom: 0.1rem;
    flex-grow: 1;
    flex-shrink: 0;
    min-width: 7rem;

    .OmniSearch-input-container {
        display: inline-flex;
        align-items: center;
        max-width: 20rem;
        position: relative;
    }

    .fa-search {
        margin-right: 0.3rem;
        position: absolute;
        left: 0.2rem;
    }

    .OmniSearch-input {
        flex: 1;
        //width: 100%;
        padding-left: 1.5rem;
    }

    .OmniSearch {
        position: absolute;
        //top: navbar-height;
        //top: -0.15rem;
        //top: 0;
        top: navbar-height;
        //left: navbar-width;

        width: navbar-width;
        themed background-color navbar-highlight-background-color
        box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.16);
        z-index: z.nav-menu.menu;
        max-height: "calc(100vh - %s)" % navbar-height;
    }
}


button.theme-button {
    cursor: pointer;
    inactive-button()
    border: 1px solid transparent;
    padding: 0.3rem;
    padding-right: 1.0rem;
    padding-left: 1.0rem;
    font-size: 1.2rem;
}

body.light header.NavBar button.theme-button.light {
    background-color: light.primary
    border-color: darken(light.primary, 8%)
    i.fa.fa-sun-o {
        color: #fff;
    }
}
body.dark header.NavBar button.theme-button.dark {
    background-color: dark.primary
    border-color: darken(dark.primary, 8%)
    i.fa.fa-moon-o {
        color: #fff;
    }
}

// do for accessible what we do for dark...
body.accessible header.NavBar button.theme-button.accessible {
    background-color: accessible.primary
    border-color: darken(accessible.primary, 8%)
    i.fa.fa-eye {
        color: #fff;
    }
}

